package dataControllerUtils.protobuf;


message ADEItemReference {
    required string itemName = 1;
    required string catalogName = 2;
}
